2011-11-09  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Update ChangeLog section
	* [BUGFIX] #31689: Incompatibility between WS v1 and WS v2

2011-11-08  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] Add smaller loading animation in front of the dropdown lists
	* [FEATURE] Add Google Map
	* [TASK][DOC] Update RELEASE_NOTES
	* [TASK] Change dependency on 'xliff' to a suggestion instead
	* [TASK] Integrate AJAX loading mask
	* [TASK] Refactor selector.js

2011-11-06  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.1

2011-10-26  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #31313: Prices are not rendered correctly

2011-10-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove translation files (now managed on http://translation.typo3.org)

2011-10-19  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] XLIFF files should contain the flag xml:space="preserve"

2011-10-18  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #31066: English XLIFF files should not contain target element

2011-10-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Get rid of phantom chapter at the end of the document
	* [TASK] #31000: Use same CF table name for TYPO3 4.5

2011-10-14  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Fix reST documentation for better PDF output

2011-10-13  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][DOC] Enhance tables with simplified syntax (thanks to Martin Bless)
	* [TASK][DOC] Add markers and subparts
	* [TASK][DOC] Add Domain Model
	* [TASK][DOC] Add chapter Administration
	* [TASK][DOC] Add chapter Tutorial, Developer manual, Known problems and To-Do list
	* [TASK][DOC] Initiate conversion to reStructuredText
	* [TASK][DOC] Fix paragraph styles for better HTML rendering on typo3.org

2011-10-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.4.0

2011-10-02  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove default WSDL end point
